last changes v2 image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/terresRabie.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rabii Terres - Développeur Full Stack</title>
     <meta name="description" content="Portfolio de Rabii Terres, développeur full stack  spécialisé en react, Angular, Symfony et PHP. Plus de 3 ans d'expérience dans le développement d'applications web modernes." />
